fix: Remove 1px gap between top bar and main

--- a/src/renderer/components/shell/MainLayout.less
+++ b/src/renderer/components/shell/MainLayout.less
@@ -3,7 +3,7 @@
 
 .main-layout {
     box-sizing: border-box;
-    padding-top: 41px;
+    padding-top: 40px;
     display: flex;
     flex-direction: row;
     height: 100%;
